[project]
name = "lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentevals>=0.0.9",
    "debugpy>=1.8.16",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.31",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem]>=0.3.8",
    "langgraph-supervisor>=0.0.29",
    "langgraph-swarm>=0.0.14",
    "langmem>=0.0.29",
    "langsmith>=0.4.16",
    "mcp>=1.13.1",
    "python-dotenv>=1.1.1",
]
